# exam_proctoring_system

./: README.md
exam_interfaces/: CMakeLists.txt  package.xml
exam_interfaces/action/: AlertAction.action
exam_interfaces/msg/: BoundingBox.msg  DepthData.msg  FaceData.msg  FaceList.msg
exam_interfaces/srv/: CheckViolation.srv
exam_proctoring/: package.xml  setup.cfg  setup.py
exam_proctoring/exam_proctoring/: alert_node.py  behavior_node.py  depth_estimator.py  face_detection.py  object_detector.py  rule_evaluation.py  system_monitor.py
